--- a/app/views/index.html
+++ b/app/views/index.html
@@ -55,7 +55,7 @@ ng-controller = "LoginController as loginCtrl">
      </div>
     <footer>
      <div class="footer-style">   
-          <a href="https://github.com/search?q=shivanijain06" target="blank">
+          <a href="https://github.com/shivanijain06" target="blank">
             <span><i class="fa fa-github fa-2x"></i>
             </span>
           </a> 
